[gd_scene load_steps=12 format=3 uid="uid://bhilp4oo5m5q2"]

[ext_resource type="Script" path="res://Scripts/npc_animation.gd" id="1_1j77w"]
[ext_resource type="Script" path="res://Scripts/npc_dialogue.gd" id="2_axmf0"]
[ext_resource type="Theme" uid="uid://c7v8yvhp2wyqo" path="res://game_theme.tres" id="3_doc15"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="4_7it1r"]
[ext_resource type="Resource" uid="uid://2cotfh732cqd" path="res://Dialog/choices.tres" id="5_mb46t"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="6_n6gba"]
[ext_resource type="Texture2D" uid="uid://b4mg0icgg0u85" path="res://Sprites/play.png" id="7_j5ibv"]
[ext_resource type="SpriteFrames" uid="uid://dotwwuro00jwf" path="res://Sprites/GreenSpritesNPC.tres" id="8_xoxu4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xiwtc"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swl3l"]
size = Vector2(16, 16)

[sub_resource type="RichTextEffect" id="RichTextEffect_lm54p"]
script = ExtResource("6_n6gba")

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_1j77w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xiwtc")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("2_axmf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_swl3l")

[node name="CanvasLayer" type="CanvasLayer" parent="Area2D"]

[node name="DialogueBox" type="Panel" parent="Area2D/CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -105.0
offset_right = 178.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_doc15")
script = ExtResource("4_7it1r")
data = ExtResource("5_mb46t")
start_id = "choicesNPC"
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_lm54p")])
next_icon = ExtResource("7_j5ibv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(0.238095, 0.21875)
sprite_frames = ExtResource("8_xoxu4")
animation = &"idle_down"

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="dialogue_ended" from="Area2D/CanvasLayer/DialogueBox" to="Area2D" method="_on_dialogue_box_dialogue_ended"]
